<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings">

        <SwitchPreference
            android:title="@string/in_app_browser"
            android:key="chrome_custom_tabs"
            android:defaultValue="true"
            android:summary="@string/in_app_browser_desc" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference android:title="@string/version" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/author">

        <Preference
            android:title="@string/follow_me_on_github"
            android:key="follow_me_on_github"
            android:summary="@string/follow_me_on_github_desc"/>

        <Preference
            android:title="@string/github_blog"
            android:key="follow_me_on_blog"
            android:summary="@string/github_blog_desc"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/support">

        <Preference android:title="@string/source_code"
            android:key="source_code"
            android:summary="@string/source_code_desc" />

        <Preference android:title="@string/feedback"
            android:key="feedback"
            android:summary="@string/feedback_desc"/>

        <Preference android:title="@string/coffee"
            android:key="coffee"
            android:summary="@string/coffee_description"/>

    </PreferenceCategory>

</PreferenceScreen>